# tiny.router

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: seed.jsonl
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
docs/src/components/: Footer.astro  Header.astro
docs/src/layouts/: Base.astro  Docs.astro
docs/src/pages/: 404.astro  index.astro  quickstart.astro  sdk.astro  training.astro
docs/src/styles/: global.css
src/tiny_router/: __init__.py  config.py  data.py  errors.py  model.py  policy.py  sdk.py  types.py
tests/: test_config.py  test_router.py  test_sdk.py
